fix:modal Barangay & dashboard ui and total counts

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,8 @@
 
 
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
+
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 
 <body data-sveltekit-preload-data="hover">
